Refactor docker_compose.py management module Update compose files to reduce number of builds

--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -14,6 +14,9 @@ services:
         - DJANGO_SETTINGS_MODULE=project.settings.testing
         - MODE=testing
       context: .
+    environment:
+      - DJANGO_SETTINGS_MODULE=project.settings.testing
+      - MODE=testing
     depends_on:
       - database
     volumes:
