--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
         - DJANGO_SETTINGS_MODULE=project.settings.local
         - MODE=local
       context: .
+    environment:
+      - DJANGO_SETTINGS_MODULE=project.settings.local
+      - MODE=local
     depends_on:
       - database
     volumes:
