--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   DOCKER_DRIVER: overlay2
 
 run_tests:
+  stage: test
   image:
     name: docker/compose:1.24.1
     entrypoint: ["/bin/sh", "-c"]
